--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "fastclick": "^1.0.6",
+    "vant": "^2.0.4",
     "vant-ui": "^1.1.63",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
